--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -231,13 +231,33 @@ a,
     color: white;
     border: 1px solid #00C853;
 }
-#friends .btn {
+.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+    border-color: black;
+    background-color: #4F1C4F;
+}
+.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
+.callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 3px #4F1C4F;
+}
+.lookFilled-1Gx00P.colorRed-1TFJan {
+    background-color: rgba(255,0,0,0.23);
+    color: #fff;
+    border: 1px solid red;
+}
+.lookFilled-1Gx00P.colorRed-1TFJan:hover {
+    background-color: rgba(255,0,0,0.63);
+    color: #fff;
+}
+#friends .btn,
+.private-channel-recipients-invite .error-state.not-friends .btn {
     background-color: #4F1C4F;
     border-radius: 50px;
     font-weight: normal;
     transition: background-color .6s ease-in;
 }
-#friends .btn:hover {
+#friends .btn:hover,
+.private-channel-recipients-invite .error-state.not-friends .btn:hover {
     background-color: #84003B;
     border-radius: 50px;
     font-weight: normal;
@@ -439,8 +459,15 @@ a,
 .progressBar-3u8FBM {
     background-color: black;
 }
-.progress-3Rbvu0 {
-    background-color: #4F1C4F;
+.progress-3Rbvu0,
+.progressBar-3u8FBM.large-3EPlRk,
+.progressBar-3u8FBM.small-1CUeBa,
+.mediaBarGrabber-1FqnbN, 
+.mediaBarProgress-1xaPtl, 
+.mediaBarProgress-1xaPtl:after, 
+.mediaBarProgress-1xaPtl:before,
+.progressBar-3u8FBM.large-3EPlRk {
+    background-color: #4F1C4F !important;
 }
 /* side item selected */
 .side-8zPYf6 .item-PXvHYJ[style*="color: rgb(240, 71, 71);"] {
@@ -907,6 +934,10 @@ a,
     background: #411741;
     color: #fff !important;
 }
+.theme-dark .item-1Yvehc {
+    border-radius: 0;
+    padding: 8px;
+}
 .theme-dark .itemSubMenu-1vN_Yn {
     background: #5F305F;
 }
@@ -1076,7 +1107,8 @@ a,
 .progressBar-3u8FBM.small-1CUeBa[style*=“background-color: rgb(114, 137, 218);”] {
     background-color: darkred !important;
 }
-.video-1FfuMD {
+.video-1FfuMD,
+.theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
 .react-datepicker__day.react-datepicker__day--mon,
