--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -208,9 +208,9 @@
 .avatar-small .status {
     width: 21px;
     height: 21px;
-    right: 22px !important;
+    right: 17px !important;
     bottom: 1px !important;
-    top: 1px;
+    top: -8px;
     transform: rotate(-9deg);
     border-radius: 1px;
     clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
@@ -415,26 +415,13 @@
     background-color: rgba(0,0,120,0.4) !important;
     border: solid 4px rgba(0,0,160,0.9) !important;
 }
-#user-profile-modal .scroller {
-    background-image: url(https://wallpapercave.com/wp/aHXgonf.jpg);
-    background-size: cover;
-}
+
 .theme-dark .connectedAccount-36nQx7 {
     border-radius: 3px;
     border: 1px solid #000;
     background: rgba(0,0,43,0.6)  !important;
  }
-#user-profile-modal .header .header-info .header-info-inner .discord-tag .username {
-    color: white;
-}
-#user-profile-modal .tab-bar-container {
-    background-color: rgba(0,0,43,0.6);
-    -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
- }
-#user-profile-modal .header:after {
-    background-color: rgba(0,0,43,1) !important;
-}
+
 .topSectionPlaying-1J5E4n{
     background: rgba(0, 0, 255,0.4);
 }
@@ -788,16 +775,7 @@ color: white;
     background: rgba(0,0,250,.2);
 }
 
-/* Bot Tags for Different Locations*/
-#user-profile-modal .header .header-info .header-info-inner .discord-tag .bot-tag {
-    background:  rgba(0,0,255,0.5);
-    border-radius: 50px;
-    color: white!important;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 16px;
-    padding: 4px 4px;
-}
+
 .botTagRegular-2HEhHi.botTag-2WPJ74 {
     background: rgba(0,0,255,0.5);
     border-radius: 13px;
@@ -877,15 +855,23 @@ color: white;
     color: white;
     border: 3px inset rgba(255,255,255,0.5);
 }
-
-#user-profile-modal .avatar-wrapper {
-background: transparent;
+.lookFilled-1Gx00P.colorRed-1TFJan {
+    background-color: rgba(255,0,0,0.23);
+    color: #fff;
+    border: 1px solid red;
 }
-#user-profile-modal .header:after {
- background: #00002b;
+.lookFilled-1Gx00P.colorRed-1TFJan:hover {
+    background-color: rgba(255,0,0,0.63);
+    color: #fff;
 }
-#user-profile-modal .actions .btn.add-friend,#user-profile-modal .actions .btn.add-friend:hover {
-    background: #00006b;
+.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+    border-color: black;
+    background-color: blue;
+}
+.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
+.callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 3px blue;
 }
 
 .notice.notice-info {
@@ -942,7 +928,8 @@ background: transparent;
     color: white;
     border: 3px inset white;
 }
-#friends .btn {
+#friends .btn,
+.private-channel-recipients-invite .error-state.not-friends .btn {
     background-color: rgba(0,0,255,0.5) !important;
     color: white;
     border: 2px outset rgba(255,255,255,0.6);
@@ -1265,6 +1252,10 @@ form, .member:hover {
    background: #0000b3;
    color: white !important;
 }
+.theme-dark .item-1Yvehc {
+    border-radius: 0;
+    padding: 8px;
+}
 .theme-dark.contextMenu-HLZMGh {
     background: black;
 }
@@ -1415,10 +1406,16 @@ form, .member:hover {
     color: rgb(255, 255, 255);
 }
 .progress-2XXRYo,
-.progressBar-3u8FBM.small-1CUeBa[style*=“background-color: rgb(114, 137, 218);”] {
+.progressBar-3u8FBM.small-1CUeBa,
+.progressBar-3u8FBM.large-3EPlRk,
+.mediaBarGrabber-1FqnbN, 
+.mediaBarProgress-1xaPtl, 
+.mediaBarProgress-1xaPtl:after, 
+.mediaBarProgress-1xaPtl:before {
     background-color: #0000e6 !important;
 }
-.video-1FfuMD {
+.video-1FfuMD,
+.theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
 /* New Invite Stuff */
