Update and rename BokuNoHeroAcademic.theme.css to BokuNoHeroAcademia.theme.css

--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"BokuNoHeroAcademic","description":"A theme dedicated to Boku No Hero Academic","author":"DevilsTheAvenged","version":"1"}*//{}
+//META{"name":"BokuNoHeroAcademia","description":"A theme dedicated to Boku No Hero Academia","author":"DevilsTheAvenged","version":"1"}*//{}
 .app {
 	background-image: url("https://images8.alphacoders.com/736/736903.jpg");
    background-size: cover !important;
