--- a/Thunderstorm.theme.css
+++ b/Thunderstorm.theme.css
@@ -1095,6 +1095,9 @@ a {
 .avatar-uploader-inner {
     background-color: #272729;
 }
+#app-mount > div.app-19_DXt.platform-osx > div > div.layers-3iHuyZ.flex-vertical.flex-spacer > div:nth-child(2) > div > div:nth-child(2) > div > div > div > div.content-column.default > div > div > div:nth-child(2) > div > div:nth-child(1) {
+    display: none; 
+}
 .theme-dark .separator-gCa7yv,
 #bd-settings-sidebar .ui-tab-bar-separator {
     background-color: transparent;
