--- a/Danganronpa.theme.css
+++ b/Danganronpa.theme.css
@@ -1257,6 +1257,9 @@ a {
     border: none;
     color: white;
 }
+#app-mount > div.app-19_DXt.platform-osx > div > div.layers-3iHuyZ.flex-vertical.flex-spacer > div:nth-child(2) > div > div:nth-child(2) > div > div > div > div.content-column.default > div > div > div:nth-child(2) > div > div:nth-child(1) {
+    display: none; 
+}
 /* Discord Settings */
 /* User Popout Modal */
 .theme-dark .headerNormal-T_seeN,
