--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -1124,6 +1124,10 @@ a {
      background-color: rgb(102, 139, 153) !important;
      color: white !important;
 }
+#app-mount > div.app-19_DXt.platform-osx > div > div.layers-3iHuyZ.flex-vertical.flex-spacer > div:nth-child(2) > div > div:nth-child(2) > div > div > div > div.content-column.default > div > div > div:nth-child(2) > div > div:nth-child(1) {
+    display: none; 
+}
+
 #bd-settings-sidebar .ui-tab-bar-header,
 .theme-dark .header-2RyJ0Y {
     color: #668B99;
